Rezolvare mici erori

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme"><!--Am schimbat theme-ul-->
-        <activity android:name=".SablonCheltuiala" />
-        <activity android:name=".EditareCont" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".LogInActivity">
+        <activity android:name=".SablonCheltuialaActivity" />
+        <activity android:name=".EditareContActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
