--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activities.StatisticsActivity">
 
         </activity>
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".Activities.TranzactieActivity">
+
+        </activity>
+        <activity android:name=".Activities.MainActivity" />
+        <activity android:name=".Activities.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SablonCheltuialaActivity" />
-        <activity android:name=".EditareContActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity">
-
-        </activity>
+        <activity android:name=".Activities.SablonCheltuialaActivity" />
+        <activity android:name=".Activities.EditareContActivity" />
+        <activity android:name=".Activities.LoginActivity" />
+        <activity android:name=".Activities.RegisterActivity" />
     </application>
 
 </manifest>
