--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/CustomTheme">
+        android:theme="@style/DayTheme">
+        <activity android:name=".Activities.WelcomeActivityTest">
+
+        </activity>
         <activity android:name=".Activities.ListaConturiActivity" />
         <activity android:name=".Activities.StatisticsActivity" />
         <activity android:name=".Activities.TranzactieActivity" />
