--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/DayTheme">
-        <activity android:name=".Activities.WelcomeActivityTest">
-
-        </activity>
+        <activity android:name=".Activities.SetariActivity"></activity>
+        <activity android:name=".Activities.WelcomeActivityTest"></activity>
         <activity android:name=".Activities.ListaConturiActivity" />
         <activity android:name=".Activities.StatisticsActivity" />
         <activity android:name=".Activities.InregistrareActivity" />
