--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -24,12 +26,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    def room_version = "2.2.6"
+    implementation 'com.google.firebase:firebase-database:19.2.1'
 
+    def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
+    'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
 // For Card view
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -40,8 +43,12 @@ dependencies {
 
     implementation 'com.github.GrenderG:Toasty:1.5.0'
 
-
     implementation 'com.jjoe64:graphview:4.2.2'
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
+    implementation 'com.google.firebase:firebase-auth'
+
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
