--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/DayTheme">
-        <activity android:name=".Activities.SetariActivity"></activity>
-        <activity android:name=".Activities.WelcomeActivityTest"></activity>
+        <activity android:name=".Activities.WelcomeActivity"></activity>
         <activity android:name=".Activities.ListaConturiActivity" />
-        <activity android:name=".Activities.StatisticsActivity" />
         <activity android:name=".Activities.InregistrareActivity" />
         <activity android:name=".Activities.MainActivity" />
-        <activity android:name=".Activities.WelcomeActivity" />
-        <activity android:name=".Activities.SablonCheltuialaActivity" />
         <activity android:name=".Activities.EditareContActivity" />
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.RegisterActivity">
